--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,44 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  layouts:
+    menu_bar:
+      catalogues: 'Catalogues'
+      catalogue_app: 'Catalogue App'
+      logout: 'Log out'
+      products: 'Products'
+      sections: 'Sections'
+  catalogues:
+    destroy:
+      success: 'Catalogue was successfully deactivated'
+      failure: 'An error has occurred while deactivating the catalogue. Please, try again later'
+    edit_catalogue_form_modal:
+      submit: 'Edit catalogue'
+      title: 'Edit catalogue'
+    index:
+      new_catalogue: 'New catalogue'
+      title: 'All catalogues'
+    new_catalogue_form_modal:
+      submit: 'Create catalogue'
+      title: 'New catalogue'
+    restore_catalogue:
+      update:
+        success: 'Catalogue was successfully activated'
+        failure: 'An error has occurred while activating the catalogue. Please, try again later'
+    sections:
+      destroy:
+        success: 'Section was successfully deactivated'
+        failure: 'An error has occurred while deactivating the section. Please, try again later'
+  sections:
+    activations:
+      create:
+        success: 'Section was successfully activated'
+        failrure: 'An error has occurred while activating the section. Please, try again later'
+    edit_section_form_modal:
+      title: 'Edit section'
+      submit: 'Edit section'
+    index:
+      catalogue_sections: "%{catalogue} Catalogue sections"
+    new_section_form_modal:
+      title: 'New section'
+      submit: 'Create section'
